--- a/vercel.json
+++ b/vercel.json
@@ -8,10 +8,7 @@
       }
     ],
     "routes": [
-      {
-        "src": "/api/(.*)",
-        "dest": "api/$1.js"
-      },
+        { "src": "/api/users/(.*)", "dest": "/api/users/$1" },
       {
         "src": "/(.*)",
         "dest": "index.js"
