--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
-  "engines": {
-    "node": "20.x"
-  },
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -21,7 +18,11 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "moongose": "^1.0.0",
+    "mongoose": "^5.13.5",
     "multer": "^1.4.5-lts.1"
+  },
+  "engines": {
+    "node": ">=18.x"
   }
+  
 }
