--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-    "name": "my-vercel-project",
+    "name": "backend",
     "version": 2,
     "builds": [
       {
@@ -8,11 +8,8 @@
       }
     ],
     "routes": [
-        { "src": "/api/users/(.*)", "dest": "/api/users/$1" },
-      {
-        "src": "/(.*)",
-        "dest": "index.js"
-      }
+      { "handle": "filesystem" },
+      { "src": "/(.*)", "dest": "server.js" }
     ]
   }
   
