--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,8 @@
     ],
     "routes": [
       { "handle": "filesystem" },
-      { "src": "/(.*)", "dest": "server.js" }
+      { "src": "/api/(.*)", "dest": "server.js" },
+      { "src": "/(.*)", "dest": "server.js" } 
     ]
   }
   
